--- a/research.html
+++ b/research.html
@@ -1,121 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Research — Gabriela Noemi Villalba Marecos</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <style>
-    :root{
-      --bg:#0f172a;          /* slate-900 */
-      --panel:#111827;       /* gray-900 */
-      --muted:#94a3b8;       /* slate-400 */
-      --text:#e5e7eb;        /* gray-200 */
-      --border:rgba(148,163,184,.22);
-      --accent:#38bdf8;      /* sky-400 */
-    }
-    *{box-sizing:border-box}
-    html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font-family:Inter,system-ui,Segoe UI,Roboto,Arial,sans-serif;line-height:1.65}
-    a{color:var(--accent);text-decoration:none}
-    a:hover{text-decoration:underline}
-    header{background:var(--panel);border-bottom:1px solid var(--border);position:sticky;top:0;z-index:10}
-    nav{max-width:980px;margin:0 auto;padding:12px 16px}
-    nav ul{list-style:none;display:flex;gap:18px;margin:0;padding:0}
-    nav a{color:var(--text);opacity:.9}
-    nav a[aria-current="page"]{opacity:1}
+<main class="container">
+  <section class="content-section">
+    <h2>Publications & Research</h2>
 
-    .container{max-width:980px;margin:0 auto;padding:28px 16px}
-    h1{font-size:clamp(26px,3vw,36px);margin:6px 0 10px;font-weight:800}
-    h2{font-size:20px;margin:24px 0 8px}
-    p.lead{color:var(--muted);margin:0 0 18px}
+    <h3>Publications</h3>
+    <ul>
+      <li>
+        <strong>Diagnóstico del Desarrollo. Paraguay, 2001–2020.</strong><br>
+        Lovera, D. & Villalba, G. (2022). <em>Ciencias Económicas</em>, 3(5), 90–106.
+        <!-- opcional -->
+        <a href="assets/papers/diagnostico-desarrollo-2022.pdf" target="_blank">[PDF]</a>
+      </li>
+    </ul>
 
-    /* Simple list look, keeping your original structure */
-    .section{background:var(--panel);border:1px solid var(--border);border-radius:14px;padding:18px;margin:18px 0}
-    .section h2{margin-top:0}
-    ul.clean{margin:8px 0 0 0;padding-left:18px}
-    ul.clean li{margin:10px 0}
-    strong{font-weight:700}
-    .meta{color:var(--muted)}
+    <h3>Submitted</h3>
+    <ul>
+      <li>
+        <strong>Brechas de aprendizaje en Paraguay...</strong><br>
+        Lovera, D. & Villalba, G. (2025). Submitted to <em>Población y Desarrollo</em>, FCE–UNA.
+      </li>
+    </ul>
 
-    /* Optional tiny badge for PDF links without preview */
-    .badge{display:inline-block;border:1px solid var(--border);border-radius:999px;padding:2px 8px;font-size:12px;margin-left:8px}
-  </style>
-</head>
-<body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="teaching.html">Teaching</a></li>
-        <li><a href="research.html" aria-current="page">Research</a></li>
-        <li><a href="phd-journey.html">PhD Journey</a></li>
-        <li><a href="media.html">Media & Resources</a></li>
-      </ul>
-    </nav>
-  </header>
+    <h3>Research in Progress</h3>
+    <ul>
+      <li><strong>Gender Pay Gap Structure in Paraguay.</strong><br> Draft for CAF–WELAC 2025.</li>
+      <li><strong>Information and Adjustment of Expectations (Peru).</strong><br> Field experiment.</li>
+      <li><strong>Innovation and Productivity in Paraguay (CDM).</strong></li>
+    </ul>
 
-  <main class="container">
-    <h1>Publications & Research</h1>
-    <p class="lead">Concise list of publications, submissions, and ongoing work.</p>
-
-    <section class="section" id="publications">
-      <h2>Publications</h2>
-      <ul class="clean">
-        <li>
-          <strong>Diagnóstico del Desarrollo. Paraguay, 2001–2020.</strong>
-          <span class="meta">Lovera, D. & Villalba, G. (2022). <em>Ciencias Económicas</em>, 3(5), 90–106.</span>
-          <!-- Optional: add a public link if available -->
-          <!-- <a class="badge" href="#" target="_blank" rel="noopener">PDF</a> -->
-        </li>
-      </ul>
-    </section>
-
-    <section class="section" id="submitted">
-      <h2>Submitted</h2>
-      <ul class="clean">
-        <li>
-          <strong>Brechas de aprendizaje en Paraguay: Un análisis aplicado de determinantes y desigualdades con datos del SNEPE 2018.</strong>
-          <span class="meta">Lovera, D. & Villalba, G. (2025). Submitted to <em>Población y Desarrollo</em>, FCE–UNA.</span>
-          <!-- <a class="badge" href="assets/papers/brechas-aprendizaje-submitted.pdf" target="_blank" rel="noopener">PDF</a> -->
-        </li>
-      </ul>
-    </section>
-
-    <section class="section" id="rip">
-      <h2>Research in Progress</h2>
-      <ul class="clean">
-        <li>
-          <strong>Gender Pay Gap Structure in a Middle-Income Country: Evidence from Paraguay.</strong>
-          <span class="meta">Villalba, G. (2025). Draft for CAF–WELAC 2025. Derived from MSc Dissertation, University of Sussex (2022).</span>
-          <!-- <a class="badge" href="assets/papers/gender-pay-gap-draft.pdf" target="_blank" rel="noopener">PDF</a> -->
-        </li>
-        <li>
-          <strong>Information and Adjustment of Expectations: Evidence from a Peruvian Program.</strong>
-          <span class="meta">Bazan, M., Quispe, D., & Villalba, G. (2025). Field experiment.</span>
-          <!-- <a class="badge" href="assets/papers/peru-expectations-preanalysis.pdf" target="_blank" rel="noopener">Pre-analysis PDF</a> -->
-        </li>
-        <li>
-          <strong>Innovation and Productivity in Paraguay: Evidence from a CDM Model.</strong>
-          <span class="meta">Olmedo, S. & Villalba, G. (2025).</span>
-          <!-- <a class="badge" href="assets/papers/cdm-paraguay-working.pdf" target="_blank" rel="noopener">PDF</a> -->
-        </li>
-      </ul>
-    </section>
-
-    <section class="section" id="phd">
-      <h2>PhD Dissertation & Projects</h2>
-      <ul class="clean">
-        <li>
-          <strong>The Effects of Accreditation Policy on Higher Education Outcomes in Colombia.</strong>
-          <span class="meta">Villalba, G. (ongoing). PhD Project.</span>
-        </li>
-        <li>
-          <strong>The Impact of T Levels on Education and Labour Market Outcomes in the UK.</strong>
-          <span class="meta">Villalba, G. (ongoing). PhD Project.</span>
-        </li>
-      </ul>
-    </section>
-  </main>
-</body>
-</html>
+    <h3>PhD Dissertation & Projects</h3>
+    <ul>
+      <li><strong>The Effects of Accreditation Policy on Higher Education Outcomes in Colombia.</strong> (PhD Project)</li>
+      <li><strong>The Impact of T Levels on Education and Labour Market Outcomes in the UK.</strong> (PhD Project)</li>
+    </ul>
+  </section>
+</main>
